--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,22 @@
     <string name="login_hint_waiting">正在登录&#8230;</string>
 
     <string name="register">注册</string>
+    <string name="register_get_verify_code">获取验证码</string>
+    <string name="register_hint_username_is_null">请输入手机号码！</string>
+    <string name="register_hint_password_is_null">请输入密码！</string>
+    <string name="register_hint_waiting">注册中&#8230;</string>
+    <string name="register_hint_verify">输入验证码</string>
+
+    <string name="activity_verify_title">验证手机号</string>
+    <string name="verify">验证</string>
+    <string name="verify_get_verify_code_waiting">%1$d秒</string>
+    <string name="verify_hint_code_is_null">请输入验证码！</string>
+    <string name="verify_sending_code">发送验证码中&#8230;</string>
+    <string name="verify_please_check_sms">请检查短信中验证码</string>
+
+    <string name="exception_user_phone_not_verified">手机号码未验证</string>
+    <string name="exception_user_or_password_is_wrong">用户名或密码错误</string>
+    <string name="exception_phone_already_registered">手机号码已注册</string>
+    <string name="exception_user_doesnot_exist">用户名不存在</string>
+
 </resources>
