--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,13 @@
     <string name="verify_hint_code_is_null">请输入验证码！</string>
     <string name="verify_sending_code">发送验证码中&#8230;</string>
     <string name="verify_please_check_sms">请检查短信中验证码</string>
+    <string name="verify_hint_input_new_password">请输入新密码！</string>
 
     <string name="exception_user_phone_not_verified">手机号码未验证</string>
     <string name="exception_user_or_password_is_wrong">用户名或密码错误</string>
     <string name="exception_phone_already_registered">手机号码已注册</string>
     <string name="exception_user_doesnot_exist">用户名不存在</string>
+
+    <string name="request_password_reset_phone_is_null">手机号码未空</string>
 
 </resources>
