1.  修改选择图片界面

--- a/libs/mediapicker/src/main/res/values/strings.xml
+++ b/libs/mediapicker/src/main/res/values/strings.xml
@@ -2,4 +2,17 @@
 
     <string name="app_name">MediaPicker</string>
 
+    <string name="mp_video_and_pic">图片和视频</string>
+    <string name="mp_preview">预览</string>
+    <string name="mp_preview_format">预览(%1$d)</string>
+    <string name="mp_preview_format_two">预览(%1$d/%2$d)</string>
+    <string name="mp_choose">选择</string>
+    <string name="mp_confirm">确定</string>
+    <string name="mp_confirm_format">确定(%1$d/%2$d)</string>
+    <string name="mp_video">视频</string>
+    <string name="mp_video_all">所有视频</string>
+    <string name="mp_pic">图片</string>
+    <string name="mp_pic_all">所有图片</string>
+    <string name="mp_video_size_too_big">视频大小超出%1$dMB</string>
+    <string name="mp_file_count_overflow_hint">最多只能选择%1$d个文件</string>
 </resources>
